--- a/sinatra-project/Gemfile
+++ b/sinatra-project/Gemfile
@@ -5,12 +5,20 @@ gem 'activerecord', '~> 4.2', '>= 4.2.6', :require => 'active_record'
 gem 'sinatra-activerecord', :require => 'sinatra/activerecord'
 gem 'rake'
 gem 'require_all'
-gem 'sqlite3'
 gem 'thin'
-gem 'shotgun'
-gem 'pry'
 gem 'bcrypt'
-gem "tux"
+gem 'rack-flash3'
+gem 'pg', '0.20'
+gem 'rails_12factor'
+gem 'foreman'
+gem 'dotenv'
+
+group :development do
+  gem 'shotgun'
+  gem 'pry'
+  gem "tux"
+  gem 'sqlite3'
+end
 
 group :test do
   gem 'rspec'
